# aws_hackathon_ai_service_assistant_backend

./: .dockerignore  .env.example  AWS_DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  README.md  apprunner-instance-role-policy.json  apprunner.yaml  bedrock_service.py  build-and-deploy-docker.sh  cloud_agent_service.py  config.py  debug_token.py  deploy-to-apprunner.sh  local_agent_service.py  main.py  mcp_client_service.py  mcp_endpoints.py  mcp_rest_endpoints.py  pyproject.toml  requirements.txt  test_mcp_client.py  update_secret.sh
