[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.65",
    "fastapi==0.115.0",
    "mcp>=1.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "requests==2.32.3",
    "uvicorn[standard]==0.32.0",
]
